--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,21 @@
 # Site settings
-title: oukohou
-subtitle: [ 璇珠杂俎]
-keywords: oukohou
-description: 我梦扬州，便想到扬州梦我。幸会。微信公众号：oukohou.
+title: 二十二夜的雪
+subtitle: [TT工作室]
+keywords: 二十二夜的雪
+description: 非淡泊无以明志；非宁静无以致远。微信公众号：.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://www.oukohou.wang/" # 你的域名
-page_no_title: "oukohou's blog" # 文章无标题时默认显示内容
+url: "https://snownight22.github.io/" # 你的域名
+page_no_title: "Snownight22's blog" # 文章无标题时默认显示内容
 beian: # "备案号"
-author: oukohou
-email: oukohou@outlook.com
+author: Snownight22
+email: tiantao714@gmail.com
 
 # Build settings
 permalink: /:year/:month/:day/:title/
 exclude: ["README.md", "changelog.md", "server", "tools", "Pipfile"]
 plugins:
   - jekyll-paginate
-  - jemoji
+#- jemoji
 
 
 # always get github's error email saying redcarpet is not supported,
@@ -58,10 +58,10 @@ menu:
 # Link settings
 links: # 友情链接
 
-  - title: ccslience's blog
-    url: http://ccslience.oukohou.wang/
-  - title: oukohou's github
-    url: https://github.com/oukohou
+#  - title: ccslience's blog
+#    url: http://ccslience.oukohou.wang/
+#  - title: oukohou's github
+#    url: https://github.com/oukohou
 #  - title:
 #    url: http://jekyllcn.com/
   - title: Jekyll blog system
@@ -69,14 +69,14 @@ links: # 友情链接
 
 
 # Google Analytics
-ga_track_id: 'UA-130856615-1'            # Format: UA-xxxxxx-xx
-ga_domain: www.oukohou.wang              # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
+ga_track_id: 'U'            # Format: UA-xxxxxx-xx
+ga_domain: auto              # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
 
 
 # Code hub settings
 codehub: # 代码仓库
   - title: Github
-    url: https://github.com/oukohou
+    url: https://github.com/Snownight22
 
 
 valine:
