--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 二十二夜的雪
 subtitle: [TT工作室]
 keywords: 二十二夜的雪
 description: 非淡泊无以明志；非宁静无以致远。微信公众号：.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/TTworksBlog" # the subpath of your site, e.g. /blog
 url: "https://snownight22.github.io/TTworksBlog" # 你的域名
 page_no_title: "Snownight22's blog" # 文章无标题时默认显示内容
 beian: # "备案号"
