--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ codehub: # 代码仓库
 
 
 valine:
-  enable: true
+  enable: false
   app_id:  K1rbn2Oo0YMM04VuzdLS7Nzz-gzGzoHsz
   app_key: AAsHbwVm8ofKFJ6ghGqqrXSU
   notify: false # mail notifier , https://github.com/xCss/Valine/wiki
@@ -90,3 +90,13 @@ valine:
   placeholder: say something~~\n - 昵称 为你所要显示的评论的ID；\n - 邮箱 只有后台可见，仅供讨论过程中是否需要交流邮件而设置，请放心填写;\n - 网址 为你的评论的昵称的超链接。\n当然，以上都可以不写，评论依然会显示……
   guest_info: nick,mail,link
   pageSize: 10
+  
+donate:
+  enable: false
+
+  
+gitalk:
+  enable: true
+  clientID: 7bd21fe83445766f6c9d
+  clientSecret: b3aeead12d9e287bae886a2cb3e9597768ff26ae
+  
