--- a/_config.yml
+++ b/_config.yml
@@ -72,6 +72,7 @@ links: # 友情链接
 ga_track_id: 'U'            # Format: UA-xxxxxx-xx
 ga_domain: auto              # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
 
+toppingCount: 10
 
 # Code hub settings
 codehub: # 代码仓库
@@ -81,8 +82,8 @@ codehub: # 代码仓库
 
 valine:
   enable: false
-  app_id:  K1rbn2Oo0YMM04VuzdLS7Nzz-gzGzoHsz
-  app_key: AAsHbwVm8ofKFJ6ghGqqrXSU
+  app_id:
+  app_key:
   notify: false # mail notifier , https://github.com/xCss/Valine/wiki
   verify: false # Verification code
   visitor: true
@@ -100,3 +101,7 @@ gitalk:
   clientID: 7bd21fe83445766f6c9d
   clientSecret: b3aeead12d9e287bae886a2cb3e9597768ff26ae
   
+live2D:
+  enable: false
+  rocket: false
+
