--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ subtitle: [TT工作室]
 keywords: 二十二夜的雪
 description: 非淡泊无以明志；非宁静无以致远。微信公众号：.
 baseurl: "/TTworksBlog" # the subpath of your site, e.g. /blog
-url: "https://snownight22.github.io/TTworksBlog" # 你的域名
+url: "https://snownight22.github.io" # 你的域名
 page_no_title: "Snownight22's blog" # 文章无标题时默认显示内容
 beian: # "备案号"
 author: Snownight22
