--- a/_config.yml
+++ b/_config.yml
@@ -105,6 +105,7 @@ live2D:
   enable: false
   rocket: false
 
+# leanCloud 配置
 leanCloud:
   enable: true
   appId: vtrlGWXgg2lOLvgkgiLacWTE-gzGzoHsz
