--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@ url: "https://snownight22.github.io" # 你的域名
 page_no_title: "Snownight22's blog" # 文章无标题时默认显示内容
 beian: # "备案号"
 author: Snownight22
-email: tiantao714@gmail.com
+email: tiantao5@gmail.com
 
 # Build settings
-permalink: /:year/:month/:day/:title/
+permalink: /:year/:month/:day/:title
 exclude: ["README.md", "changelog.md", "server", "tools", "Pipfile"]
 plugins:
   - jekyll-paginate
